--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,40 @@
-# Compiled class file
-*.class
+### Maven template
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+# https://github.com/takari/maven-wrapper#usage-without-binary-jar
+.mvn/wrapper/maven-wrapper.jar
 
-# Log file
-*.log
+### Go template
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
 
-# BlueJ files
-*.ctxt
+# Test binary, built with `go test -c`
+*.test
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# Dependency directories (remove the comment below to include it)
+# vendor/
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+### Example user template template
+### Example user template
+
+# IntelliJ project files
+.idea
+*.iml
+out
+gen
+
+dataset/
